[DT-3595] Switch dataset/study registration to DTO/domain validators (#2974)